--- a/app/views/registrations/signup.erb
+++ b/app/views/registrations/signup.erb
@@ -1,7 +1,7 @@
 <h3>Sign Up</h3>
 <form action="/registration/signup" method="POST">
-	<input type="text" name="username" placeholder="Username:"><br>
-	<input type="email" name="user[email]" placeholder="Email:"><br>
+	<input type="text" name="users[username]" placeholder="Username:"><br>
+	<input type="email" name="users[email]" placeholder="Email:"><br>
 	<input type="password" name="password" placeholder="Password:"><br>
 	<input type="submit" value="Sign Up">
 </form>
