--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,2 +1,4 @@
 <h1> Welcome User </h1>
-<a href="/logout">Log Out</a>
+<a href="/logout">Log Out</a> <br>
+<a href="/new">Create Post</a> <br>
+<a href="/posts">Show All Posts</a>
