--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,3 +1,10 @@
 <h2>
     <%= @post.post %>
 </h2>
+
+<a href="/posts/<%= @post.id %>/edit">EDIT</a>
+
+<form action="/posts/<%= @post.id %>" method="post">
+    <input type="hidden" name="_method" value="delete"> 
+    <input type="submit" value="Delete Post">
+</form>
