--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,4 +1,9 @@
 <h1> Welcome User </h1>
-<a href="/logout">Log Out</a> <br>
-<a href="/new">Create Post</a> <br>
+
+<form action="/logout" method="post">
+    <input type="hidden" name="_method" value="delete"> 
+    <input type="submit" value="Log Out">
+</form>
+
+<a href="/posts/new">Create Post</a> <br>
 <a href="/posts">Show All Posts</a>
