--- a/app/views/users/home.erb
+++ b/app/views/users/home.erb
@@ -1,4 +1,5 @@
-<h1> Welcome User </h1>
+<h1> Welcome <%= current_user.username %> </h1>
+
 
 <form action="/logout" method="post">
     <input type="hidden" name="_method" value="delete"> 
