fixing up show.erb file

--- a/app/views/posts/show.erb
+++ b/app/views/posts/show.erb
@@ -1,5 +1,8 @@
 <h2>
-    <%= @post.content %>
+    <%= @post.content %><br>
+    <%= @post.gamer_tag %><br>
+    <%= @post.game %><br>
+    <%= @post.platform %>
 </h2>
 
 <a href="/posts/<%= @post.id %>/edit">EDIT</a>
