--- a/app/views/posts/new.erb
+++ b/app/views/posts/new.erb
@@ -1,6 +1,6 @@
 <h3>Create a Post</h3>
 <form action="/posts" method="POST">
-	<input type="text" name="post[content]" placeholder="Type here :)"><br>
+	<input type="text" name="post[content]" placeholder="Activity"><br>
 	<input type="text" name="post[gamer_tag]" placeholder="Gamertag"><br>
 	<input type="text" name="post[game]" placeholder="Game"><br>
 	<input type="text" name="post[platform]" placeholder="Platform"><br>
